syntax = "proto3";
package deals.rpc;

option go_package = "github.com/textileio/powergate/deals/rpc";

message DealConfig {
	string miner = 1;
	uint64 epoch_price = 2;
}

message DealInfo {
	string proposal_cid = 1;
	uint64 state_id = 2;
	string state_name = 3;
	string miner = 4;

	bytes piece_cid = 5;
	uint64 size = 6;

	uint64 price_per_epoch = 7;
	uint64 start_epoch = 8;
	uint64 duration = 9;

	uint64 deal_id = 10;
	int64 activation_epoch = 11;
	string msg = 12;
}

message StoreParams {
    string address = 1;
    repeated DealConfig deal_configs = 2;
    uint64 min_duration = 3;
}

message StoreRequest {
    oneof payload {
        StoreParams store_params = 1;
        bytes chunk = 2;
    }
}

message StoreResponse {
    string data_cid = 1;
    repeated string proposal_cids = 2;
    repeated DealConfig failed_deals = 3;
}

message WatchRequest {
    repeated string proposals = 1;
}

message WatchResponse {
    DealInfo deal_info = 1;
}

message RetrieveRequest {
    string address = 1;
    string cid = 2;
}

message RetrieveResponse {
    bytes chunk = 1;
}

service RPCService {
    rpc Store(stream StoreRequest) returns (StoreResponse) {}
    rpc Watch(WatchRequest) returns (stream WatchResponse) {}
    rpc Retrieve(RetrieveRequest) returns (stream RetrieveResponse) {}
}
